test/Fail/LargeIndices.err
LargeIndices.agda:5.3-6: error: [ConstructorDoesNotFitInData]
Constructor inv
of sort Set a
does not fit into data type of sort Set.
(Reason: Set a is not less or equal than Set)
when checking that the type A of an argument to the constructor inv
fits in the sort Set of the datatype.
